Fix office info spacing. Change office section bg color

--- a/css/about.css
+++ b/css/about.css
@@ -140,9 +140,9 @@
     width: 90%;
     max-width: 70em;
     padding: 4em 0 2em;
-    background: linear-gradient(var(--primary), var(--primary) 2.5%, white 2.5%, white);
+    background: linear-gradient(#3f51b5, #3f51b5 2.5%, white 2.5%, white);
     -webkit-box-shadow: 0px -7px 11px -1px rgba(0,0,0,0.2); 
-    box-shadow: 0px -4px 10px 4px rgba(0,0,0,0.2);
+            box-shadow: 0px -4px 10px 4px rgba(0,0,0,0.2);
     border-radius: 10px;
   } 
   #office .container h2 {
@@ -175,7 +175,8 @@
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between;
-    padding: 0.15em 0.5em;
+    align-items: center;
+    /* padding: 0.15em 0.5em; */
   }
   #office .contact-info p {
     font-size: min(5vw, 1.25rem);
@@ -183,11 +184,11 @@
   #office .contact-info span {
     white-space: nowrap;
   }
-  #office .contact-info .flex > *:first-child {
+  #office .contact-info .flex > :first-child {
     width: 30%;
     font-weight: 700;
   }
-  #office .contact-info .flex > *:last-child {
+  #office .contact-info .flex > :last-child {
     width: 65%;
     text-align: left;
   }
@@ -202,6 +203,11 @@
   }
   #office .phone img {
     width: 2em;
+  }
+  #office .phone .img-wrapper {
+    display: flex;
+    justify-content: center;
+    padding: 1em 0;
   }
   #office iframe {
     max-width: 90%;
@@ -240,7 +246,7 @@
     display: block;
     width: 100%;
     height: 0.2em;
-    background: var(--primary);
+    background: #3f51b5;
     opacity: 1;
     bottom: -0.3em;
     border-radius: 0.15789474em;
@@ -249,12 +255,6 @@
   }
   #office .contact-info.other-offices:last-of-type {
     margin-bottom: 0;
-  }
-  #office .contact-info.other-offices > .flex > .img-wrapper {
-    text-align: right;
-  }
-  #office .contact-info.other-offices > .phone.flex > .img-wrapper {
-    padding-right: 0.5em;
   }
 }
 
